--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation 'com.github.Cutta:GifView:1.6'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+
+
 }
