--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ android {
         dataBinding true
     }
 }
-
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -52,6 +53,8 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
 
 }
