--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
+    //=========By Thu Hien
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
